<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hasil"
        android:text="@string/hasil_jawaban"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nilai"
        android:text="@string/_100"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="65sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ulangi"
        android:text="@string/ulangi_kuis"/>

</LinearLayout>