<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="@drawable/gradient"
    tools:context=".SoalActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/papantulis"/>

    <TextView
        android:id="@+id/pertanyaan"
        android:layout_width="288dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:text="@string/pertanyaan_kuis"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pilihan A"
        android:id="@+id/pilihanA"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilihan_b"
        android:id="@+id/pilihanB"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilihan_c"
        android:id="@+id/pilihanC"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilihan_d"
        android:id="@+id/pilihanD"/>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:layout_alignParentBottom="true"
            android:onClick="next"/>
    </RelativeLayout>
</LinearLayout>