<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".MenuActivity">

        <TextView
            android:id="@+id/teks1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="AYO BELAJAR"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MATEMATIKA"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

                <ImageView
                    android:id="@+id/gambar"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/gambar"
                    android:src="@drawable/gambar" />

                <Button
                    android:id="@+id/materi"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/materi"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/latihan"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:background="@drawable/bg_button"
                    android:text="@string/latihan"
                    android:textColor="@android:color/black" />

        <Button
            android:id="@+id/keluar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/keluar"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
</LinearLayout>